--- a/vignettes/irace-package.bib
+++ b/vignettes/irace-package.bib
@@ -46,6 +46,8 @@
 
 @string{orp = {Operations Research Perspectives}}
 
+@string{telo = {ACM Transactions on Evolutionary Learning and Optimization}}
+
 @string{balaprakash = {  Prasanna Balaprakash }}
 
 @string{bartz-beielstein = { Thomas Bartz-Beielstein }}
@@ -55,6 +57,8 @@
 @string{biedenkapp = { Biedenkapp, Andr{\'e} }}
 
 @string{birattari = { Mauro Birattari }}
+
+@string{branke = { J{\"u}rgen Branke }}
 
 @string{chiarandini = { Marco Chiarandini }}
 
@@ -140,6 +144,34 @@
   pages = {267--306},
   month = oct,
   doi = {10.1613/jair.2861}
+}
+
+@article{LopBraPaq2021telo,
+  author = lopez-ibanez # and # branke # and # paquete,
+  title = {Reproducibility in Evolutionary Computation},
+  journal = telo,
+  year = 2021,
+  volume = 1,
+  number = 4,
+  pages = {1--21},
+  doi = {10.1145/3466624},
+  epub = {https://arxiv.org/abs/2102.03380},
+  abstract = {Experimental studies are prevalent in Evolutionary
+                  Computation (EC), and concerns about the reproducibility and
+                  replicability of such studies have increased in recent times,
+                  reflecting similar concerns in other scientific fields. In
+                  this article, we suggest a classification of different types
+                  of reproducibility that refines the badge system of the
+                  Association of Computing Machinery (ACM) adopted by TELO. We
+                  discuss, within the context of EC, the different types of
+                  reproducibility as well as the concepts of artifact and
+                  measurement, which are crucial for claiming
+                  reproducibility. We identify cultural and technical obstacles
+                  to reproducibility in the EC field. Finally, we provide
+                  guidelines and suggest tools that may help to overcome some
+                  of these reproducibility obstacles.},
+  keywords = {Evolutionary Computation, Reproducibility, Empirical study,
+                  Benchmarking}
 }
 
 @article{LopDubPerStuBir2016irace,
