--- a/TODO
+++ b/TODO
@@ -37,18 +37,6 @@ TODO General (in order of importance):
     
  * Fix all FIXMEs.
 
- * Use 'x <- eval(parse(text=paste0("expression","(1,min(ants,10))")))' to parse domains.
-
- * Add a programmatic interface to create parameters (or use paradox):
-
-  d = ParametersNew(p_real('initial_temp', 0.02, 5e4, transf="log"),
-                  p_real('restart_temp_ratio', 1e-5, 1, transf="log"),
-                  p_real('visit', 1.001, 3),
-                  p_real('b', quote(visit), quote(visit + 10)),
-                  p_real('accept', -1e3, -5, quote(no_local_search == "ccc")),
-                  p_ord('no_local_search', '1', 'ccc')
-                  )
-
  * Consume all budget by using post-selection
  
  * Federico's implementation of DAG / Complexity metric.
@@ -289,6 +277,19 @@ TODO General (in order of importance):
 ------------------------------------------------------------------------------
 
 DONE:
+
+ * Use 'x <- eval(parse(text=paste0("expression","(1,min(ants,10))")))' to parse domains.
+   [DONE by Manuel]
+
+ * Add a programmatic interface to create parameters (or use paradox): [DONE by Manuel]
+
+  d = ParametersNew(p_real('initial_temp', 0.02, 5e4, transf="log"),
+                  p_real('restart_temp_ratio', 1e-5, 1, transf="log"),
+                  p_real('visit', 1.001, 3),
+                  p_real('b', quote(visit), quote(visit + 10)),
+                  p_real('accept', -1e3, -5, quote(no_local_search == "ccc")),
+                  p_ord('no_local_search', '1', 'ccc')
+                  )
 
  * Use saveRDS/readRDS instead of load/save (.Rdata) to avoid overriding
    userspace. Do the same for ablation logs. [NOT DONE because "Files produced
