--- a/TODO
+++ b/TODO
@@ -46,8 +46,6 @@ TODO General (in order of importance):
 
    The Fisher Exact probability test is an excellent non-parametric technique for comparing proportions, when the two independent samples are small in size.
 
- * Avoid duplicated elites.
- 
  * Sensitivity analysis: try values around the best configuration found, one at
    a time.
 
@@ -278,6 +276,8 @@ TODO General (in order of importance):
 
 DONE:
 
+ * Avoid duplicated elites. [DONE by Manuel]
+ 
  * Use 'x <- eval(parse(text=paste0("expression","(1,min(ants,10))")))' to parse domains.
    [DONE by Manuel]
 
